# transplicon

./: .gitignore  README.md  main.py  nextflow.config  pixi.toml  pyproject.toml
scripts/000-setup/: env_setup.sh
scripts/001-gather-data/: fetch_amplicon_data.sh  fetch_genomic_data.sh  sample_gtdb_genomes.py
scripts/002-prepare-data/: annotate.nf  dereplicate_16s_data.sh  run_annotation.sh
transplicon/: __init__.py  amplicon.py  annotation.py  feature_extraction.py  head.py  predict.py  prepare_input.py
